--- a/src/extensions-dashlet.scss
+++ b/src/extensions-dashlet.scss
@@ -1,19 +1,29 @@
 .dashlet-extensions {
   display: flex;
   flex-direction: column;
+
   ul {
-    margin-bottom: 0;
-    padding: 0 4px;
+    margin: 0;
+    padding: 0 8px 0 0;
     overflow: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
   }
+
   .placeholder {
     height: 100%;
   }
 
   .extension-item {
-    background-color: $brand-menu !important;
-    padding: 0 10px;
-    margin-bottom: 8px !important;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    user-select: all;
+    border-radius: 4px;
+    border: 1px solid #1c1e1d;
+    padding: 8px;
+    background-color: $brand-bg;
   }
 
   .extension-image {
@@ -25,14 +35,14 @@
 
   .extension-type {
     position: absolute;
-    top: 0;
-    left: 8px;
+    top: 12px;
+    left: 0;
     padding: 0 4px;
     font-family: $font-family-headings;
-    font-weight: 400;
-    box-shadow: 0px 0px 6px 1px rgba(0,0,0,0.36);
+    font-weight: bold;
+    box-shadow: none;
     background-color: $brand-info;
-    text-transform: capitalize;
+    text-transform: uppercase;
   }
 
   .extension-title {
@@ -46,14 +56,27 @@
     align-items: center;
   }
 
+  h4 {
+    margin: 0;
+    text-transform: uppercase;
+
+    a {
+      cursor: pointer;
+    }
+  }
+
+  .extension-summary {
+    margin: 0;
+  }
+
   .extension-extra {
     background: $gray-lighter;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 8px;
+    padding: 0;
     font-size: smaller;
-    margin: 10px 0;
+    margin: 0;
   
     svg {
       margin-right: 4px;
